--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <div class="container">
-    <h1> Maafin Aku Ya...</h1>
+    <h1>😔 Maafin Aku Ya...</h1>
     <p>Aku nggak bermaksud nyakitin kamu. Serius deh.</p>
     <p>Aku tahu aku mungkin udah bikin kamu kecewa, bikin kamu sedih, dan mungkin bikin kamu mikir ulang tentang aku.
       Tapi aku pengin kamu tahu... aku gak pernah niat buat nyakitin kamu sama sekali. Kadang, aku terlalu cuek, terlalu bodoh, dan terlalu santai tanpa sadar kalau yang kulakuin itu nyakitin kamu.</p>
@@ -93,4 +93,3 @@
   </footer>
 </body>
 </html>
-
