--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Chynthia</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <div class="container">
-    <h1>Lihat Foto Ini 😂</h1>
-    <button onclick="jumpscare()">Lihat Foto</button>
-  </div>
-
-  <div class="jumpscare" id="jumpscare">
-    <img src="https://i.imgur.com/7KxUoK5.png" alt="SCARY FACE">
-  </div>
-
-  <audio id="scream" src="scream.mp3"></audio>
-
-  <script src="script.js"></script>
-</body>
-</html>
-
-
+anjay 
